Boot task (#6)
* Spring-Boot task init

* Spring-Boot task init

* Spring-Boot task init

* spring-boot profiles added
(local and test profiles are real and tested)

* spring-boot actuator custom health indicators and prometheus added
but currently prometheus not working with "server returned HTTP status 406" error.

* spring-boot actuator custom health indicators and prometheus added
but currently prometheus not working with "server returned HTTP status 406" error.

* some errors were founded and resolved.

* some errors were founded and resolved again.

* unused imports removed

* all Dao replaced by JpaRepositories in services.

* all unnecessary DAO was removed

* all unnecessary DAO was removed

* Dockerfile added, pom.xml changed on jar packaging.

* - Removed explicit version from spring-boot-starter-data-jpa dependency in pom.xml and added spring-boot-starter-parent as a parent.
- Removed unnecessary Config class and WebAppInit class and Dockerfile as they are not needed.

* - Removed explicit version from spring-boot-starter-data-jpa dependency in pom.xml and added spring-boot-starter-parent as a parent.
- Removed unnecessary Config class and WebAppInit class and Dockerfile as they are not needed.

* -commented classes was deleted

* unconventional variables renamed

* type of returned value of LoginService.login method replaced on String

* endpoint /{username}/trainer-trainings replaced on /{username}/trainings getTrainerTrainingsList and getTraineeTrainingsList replaced from TrainingService to Trainees and Trainers Services.

* endpoint /{username}/trainer-trainings replaced on /{username}/trainings getTrainerTrainingsList and getTraineeTrainingsList replaced from TrainingService to Trainees and Trainers Services.

* logging has changed, according to the remarks

* merge UpdateTrainee(Trainer)ProfileRequest and username - add username to request DTOs

* chain in updateTrainersList() method was split it to 